--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>Re-Vanced</title>
   </head>
   <body>
-    <noscript>One site for both Youtube vidoes and music</noscript>
+    <noscript>One site for both vidoes and music</noscript>
     <div id="root"></div>
   </body>
 </html>
